# test_task19091400

./: .gitignore  Dockerfile  OPTIMIZATION_PLAN.md  README.MD  README.md  README_DETAILED.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml
fastapi-application/: .env.template  create_fastapi_app.py  main.py
fastapi-application/alembic/versions/: 2025_09_19_2225-046f48aa2e35_create_tables.py  2025_09_19_2332-6401a9f62787_add_balance_before_and_balance_after_to_.py  2025_09_20_0002-90ab958c989d_change_weight_to_integer_in_merchant_.py  2025_09_21_1044-65794e775c5c_add_merchant_id_and_trader_id_fields_to_.py  2025_09_21_1259-d249ec50779d_create_tables.py  2025_09_21_1316-fa806741c664_populate_db_with_initial_data.py
fastapi-application/api/: __init__.py
fastapi-application/api/api_v1/: __init__.py  applications.py  auth.py  balances.py  links.py  users.py
fastapi-application/api/v1/: __init__.py  applications.py  auth.py  rates.py  stats.py
fastapi-application/core/: auth.py  config.py
fastapi-application/core/gunicorn/: __init__.py  app_options.py
fastapi-application/core/models/: __init__.py  application.py  balance_transaction.py  merchant_traderLink.py  user.py
fastapi-application/core/schemas/: applications.py  auth.py  balance.py  links.py  rates.py  stats.py
fastapi-application/crud/: applications.py  links.py  stats.py
tests/: conftest.py  test_applications.py  test_links.py
